--- a/web07-bootstrap/src/main/resources/案例一：使用BootStrap对首页进行重构/index.html
+++ b/web07-bootstrap/src/main/resources/案例一：使用BootStrap对首页进行重构/index.html
@@ -151,7 +151,7 @@
 		<div class="container" style="margin-top: 10px;">
 			<!--上面文字内容-->
 			<div class="row">
-				<span id="" style="font-size: 30px;padding-left: 33px;">
+				<span id="aa" style="font-size: 30px;padding-left: 33px;">
 					热门商品&nbsp;&nbsp;&nbsp;<img src="../img/title2.jpg" />
 				</span>
 			</div>
