--- a/web01-html/src/main/resources/案例三-网站友情链接显示页面/网站友情链接显示页面.html
+++ b/web01-html/src/main/resources/案例三-网站友情链接显示页面/网站友情链接显示页面.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <ul>
-    <li><a href="../案例一: 网站信息显示页面/网站信息显示页面.html">黑马</a></li>
+    <li><a href="../案例一-网站信息显示页面/网站信息显示页面.html">黑马</a></li>
     <li><a href="#">华为</a></li>
     <li><a href="#">通讯等</a></li>
     <li><a href="#">阿里巴巴</a></li>
